update first lorad data

--- a/table.html
+++ b/table.html
@@ -9,6 +9,7 @@
 <header>
     <div class="headerstatus">
         <input id="tablechangedname">
+        <p id="testdate"></p>
     </div>
     <div class="headestyle">
         <button onclick="gettime()">press</button>
